--- a/skel/.config/sway/config
+++ b/skel/.config/sway/config
@@ -96,15 +96,15 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
     bindsym $mod+Right focus right
 
     # Move the focused window with the same, but add Shift
-    bindsym $mod+Shift+$left move left
-    bindsym $mod+Shift+$down move down
-    bindsym $mod+Shift+$up move up
-    bindsym $mod+Shift+$right move right
+    bindsym $mod+Shift+$left move left 100px
+    bindsym $mod+Shift+$down move down 100px
+    bindsym $mod+Shift+$up move up 100px
+    bindsym $mod+Shift+$right move right 100px
     # Ditto, with arrow keys
-    bindsym $mod+Shift+Left move left
-    bindsym $mod+Shift+Down move down
-    bindsym $mod+Shift+Up move up
-    bindsym $mod+Shift+Right move right
+    bindsym $mod+Shift+Left move left 10px
+    bindsym $mod+Shift+Down move down 10px
+    bindsym $mod+Shift+Up move up 10px
+    bindsym $mod+Shift+Right move right 10px
 #
 # Workspaces:
 #
