--- a/skel/.config/waybar/config
+++ b/skel/.config/waybar/config
@@ -72,7 +72,7 @@
         "tooltip-format": "MPD (connected)",
         "tooltip-format-disconnected": "MPD (disconnected)",
         "on-click": "mpc toggle",
-//        "on-click-right": "foot -a ncmpcpp ncmpcpp",
+        "on-click-right": "foot -a ncmpcpp ncmpcpp",
         "on-scroll-up": "mpc volume +2",
         "on-scroll-down": "mpc volume -2"
 
@@ -140,7 +140,7 @@
         "format-alt": " {ifname}: {ipaddr}/{cidr}"
     },
     "pulseaudio": {
-        // "scroll-step": 1, // %, can be a float
+        "scroll-step": 5, // %, can be a float
         "format": "{icon} {volume}% {format_source}",
         "format-bluetooth": " {icon} {volume}% {format_source}",
         "format-bluetooth-muted": "  {icon} {format_source}",
@@ -156,7 +156,8 @@
 //            "car": "",
             "default": ["", "", ""]
         },
-        "on-click": "pavucontrol"
+        "on-click": "pavucontrol",
+        "on-click-right": "foot -a pw-top pw-top"
     },
     "custom/media": {
         "format": "{icon} {}",
