--- a/skel/.config/waybar/config
+++ b/skel/.config/waybar/config
@@ -91,7 +91,9 @@
     "clock": {
         // "timezone": "America/New_York",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "format-alt": "{:%Y-%m-%d}"
+        //"format-alt": "{:%Y-%m-%d}"
+        "format": "{:L%Y-%m-%d<small>[%a]</small> <tt><small>%p</small></tt>%I:%M}"
+        //"format": "{:%Y-%m-%d %H:%M}"
     },
     "cpu": {
         "format": " {usage}%",
