--- a/skel/.config/ranger/rc.conf
+++ b/skel/.config/ranger/rc.conf
@@ -1,4 +1,3 @@
-default_linemode unicode_icons
 # ===================================================================
 # This file contains the default startup commands for ranger.
 # To change them, it is recommended to create either /etc/ranger/rc.conf
@@ -178,7 +177,7 @@ set draw_borders both
 set dirname_in_tabs false
 
 # Enable the mouse support?
-set mouse_enabled true
+set mouse_enabled false
 
 # Display the file size in the main column or status bar?
 set display_size_in_main_column true
@@ -779,3 +778,4 @@ tmap <delete>   eval -q fm.ui.taskview.task_remove()
 tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
+default_linemode devicons
