--- a/skel/.config/sway/config
+++ b/skel/.config/sway/config
@@ -22,6 +22,7 @@ set $menu dmenu_path | wofi --show drun -I | xargs swaymsg exec --
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+focus_on_window_activation focus
 #
 # Example configuration:
 #
