--- a/skel/.config/mpv/input.conf
+++ b/skel/.config/mpv/input.conf
@@ -35,11 +35,18 @@ F9 show-text ${track-list}
 2 set current-window-scale 1
 3 set current-window-scale 1.5
 4 set current-window-scale 2
-i script-binding stats/display-stats   # display information and statistics
-I script-binding stats/display-stats-toggle # toggle displaying information and statistics
-O no-osd cycle-values osd-level 3 1    # toggle displaying the OSD on user interaction or always
+# i script-binding stats/display-stats   # display information and statistics
+i script-binding stats/display-stats-toggle # toggle displaying information and statistics
+# O no-osd cycle-values osd-level 3 1    # toggle displaying the OSD on user interaction or always
 o show-progress                        # show playback progress
 q quit
+
+h seek -2
+j add volume -2
+k add volume 2
+l seek 2
+[ playlist-prev
+] playlist-next
 
 # mpv keybindings
 #
