--- a/skel/.config/ranger/rc.conf
+++ b/skel/.config/ranger/rc.conf
@@ -116,7 +116,7 @@ set preview_images true
 #   Preview images in full color with the external command "ueberzug".
 #   Images are shown by using a child window.
 #   Only for users who run X11 in GNU/Linux.
-#set preview_images_method sixel
+set preview_images_method sixel
 
 # Delay in seconds before displaying an image with the w3m method.
 # Increase it in case of experiencing display corruption.
@@ -177,7 +177,7 @@ set draw_borders both
 set dirname_in_tabs false
 
 # Enable the mouse support?
-set mouse_enabled false
+set mouse_enabled true
 
 # Display the file size in the main column or status bar?
 set display_size_in_main_column true
@@ -363,7 +363,7 @@ alias travel     scout -aefklst
 # ===================================================================
 # == Define keys for the browser
 # ===================================================================
-
+map <A-m> mount
 # Basic
 map     Q quitall
 map     q quit
