--- a/skel/.config/ranger/rifle.conf
+++ b/skel/.config/ranger/rifle.conf
@@ -190,7 +190,6 @@ mime ^image, has viewnior,  X, flag f = viewnior -- "$@"
 mime ^image/svg, has inkscape, X, flag f = inkscape -- "$@"
 mime ^image/svg, has display,  X, flag f = display -- "$@"
 
-mime ^image, has swayimg,       X, flag f = swayimg -- "$@"
 mime ^image, has imv,       X, flag f = imv -- "$@"
 mime ^image, has pqiv,      X, flag f = pqiv -- "$@"
 mime ^image, has sxiv,      X, flag f = sxiv -- "$@"
@@ -223,15 +222,15 @@ ext 7z|ace|ar|arc|bz2?|cab|cpio|cpt|deb|dgc|dmg|gz,  has atool = atool --extract
 ext iso|jar|msi|pkg|rar|shar|tar|tgz|xar|xpi|xz|zip, has atool = atool --extract --each -- "$@"
 
 # Listing and extracting archives without atool:
-ext tar|gz|bz2|xz, has tar = tar vvtf "$1" | $PAGER
-ext tar|gz|bz2|xz, has tar = for file in "$@"; do tar vvxf "$file"; done
-ext bz2, has bzip2 = for file in "$@"; do bzip2 -dk "$file"; done
-ext zip, has unzip = unzip -l "$1" | less
-ext zip, has unzip = for file in "$@"; do unzip -d "${file%.*}" "$file"; done
-ext ace, has unace = unace l "$1" | less
-ext ace, has unace = for file in "$@"; do unace e "$file"; done
-ext rar, has unrar = unrar l "$1" | less
-ext rar, has unrar = for file in "$@"; do unrar x "$file"; done
+# ext tar|gz|bz2|xz, has tar = tar vvtf "$1" | $PAGER
+# ext tar|gz|bz2|xz, has tar = for file in "$@"; do tar vvxf "$file"; done
+# ext bz2, has bzip2 = for file in "$@"; do bzip2 -dk "$file"; done
+# ext zip, has unzip = unzip -l "$1" | less
+# ext zip, has unzip = for file in "$@"; do unzip -d "${file%.*}" "$file"; done
+# ext ace, has unace = unace l "$1" | less
+# ext ace, has unace = for file in "$@"; do unace e "$file"; done
+# ext rar, has unrar = unrar l "$1" | less
+# ext rar, has unrar = for file in "$@"; do unrar x "$file"; done
 ext rar|zip, has qcomicbook, X, flag f = qcomicbook "$@"
 ext rar|zip, has mcomix,     X, flag f = mcomix -- "$@"
 ext rar|zip, has zathura,    X, flag f = zathura -- "$@"
