--- a/skel/.config/hypr/hyprlock.conf
+++ b/skel/.config/hypr/hyprlock.conf
@@ -2,7 +2,8 @@ background {
     monitor =
     monitor = DP-1
     # path = /home/$USER/.config/hypr/wall2.png   # supports png, jpg, webp (no animations, though)
-    path = /home/$USER/.config/hypr/.dp1.png   # supports png, jpg, webp (no animations, though)
+    # path = /home/$USER/.config/hypr/.dp1.png   # supports png, jpg, webp (no animations, though)
+    path = screenshot   # supports png, jpg, webp (no animations, though)
     # color = rgba(25, 20, 20, 0.7)
     color = rgba(0, 0, 0, 0.7)
 
