--- a/skel/.config/yazi/package.toml
+++ b/skel/.config/yazi/package.toml
@@ -1,5 +1,17 @@
-[plugin]
-deps = [{ use = "yazi-rs/plugins:full-border", rev = "40eafa3" }, { use = "yazi-rs/plugins:git", rev = "ec97f88" }]
+[[plugin.deps]]
+use = "yazi-rs/plugins:full-border"
+rev = "8f1d971"
+hash = "3996fc74044bc44144b323686f887e1"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:mount"
+rev = "8f1d971"
+hash = "4fccaaf10c36dc2466e2438a386ff017"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:git"
+rev = "8f1d971"
+hash = "63b6c222bf2103b3023389dde5e2ecfe"
 
 [flavor]
 deps = []
