--- a/skel/.config/hypr/hyprland.conf
+++ b/skel/.config/hypr/hyprland.conf
@@ -44,23 +44,35 @@ $menu = wofi --show drun -I
 # exec-once = waybar & hyprpaper & firefox
 #exec-once = ibus-daemon -drR
 
-exec-once = fcitx5 -d
-exec-once = waybar
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+# exec-once = swaync &
+exec-once = fcitx5 -d &
+exec-once = waybar -c ~/.config/waybar/config.hypr
+exec-once = eww daemon
+exec-once = eww open-many cpu-desktop-widget gpu-desktop-widget ram-desktop-widget disk-desktop-widget calendar-desktop-widget 
+exec-once = systemctl --user start hyprpolkitagent
+
+# exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = hyprpolkit &
 exec-once = hypridle
 #exec-once = udiskie &
+# exec-once = easyeffects --gapplication-service
+exec-once = discord
+# layerrule = desktop, calendar
+# layerrule = desktop, Eww
 
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
 
+env = HYPRCURSOR_THEME,Vimix-white-cursors
+env = HYPRCURSOR_SIZE,24
+
+# XWayland (X 애플리케이션용) 및 GTK
+env = XCURSOR_THEME,Vimix-white-cursors
+env = XCURSOR_SIZE,24
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 env = XDG_SESSION_DESKTOP,Hyprland
 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
-
-#env = GLFW_IM_MODULE=ibus
 env = GLFW_IM_MODULE,fcitx
 env = GTK_IM_MODULE,fcitx
 env = QT_IM_MODULE,fcitx
@@ -68,11 +80,7 @@ env = XMODIFIERS,@im=fcitx
 env = SDL_IM_MODULE,fcitx
 
 # env = IMSETTINGS_MODULE=fcitx
-# env = INPUT_METHOD=fcitx
-
-# env = GTK_IM_MODULE,ibus
-# env = QT_IM_MODULE,ibus
-# env = XMODIFIERS,@im=ibus
+# env = INPUT_METHOD=wayland
 
 #####################
 ### LOOK AND FEEL ###
@@ -82,19 +90,19 @@ env = SDL_IM_MODULE,fcitx
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
-    gaps_in = 5
-    gaps_out = 20
+  gaps_in = 5
+    gaps_out = 10
 
     border_size = 2
 
-    # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
+# https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
 
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false 
+# Set to true enable resizing windows by clicking and dragging on borders and gaps
+    resize_on_border = true 
 
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
+# Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
     layout = dwindle
@@ -102,32 +110,32 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 6
+  rounding = 6
 
-    # Change transparency of focused and unfocused windows
+# Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 0.9
 
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aff)
+# drop_shadow = true
+# shadow_range = 4
+# shadow_render_power = 3
+# col.shadow = rgba(1a1a1aff)
 
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
+# https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
-        enabled = false
+      enabled = false
         size = 3
         passes = 1
-        
+
         vibrancy = 0.1696
     }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = true
+  enabled = true
 
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+# Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
@@ -141,20 +149,22 @@ animations {
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+  pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # You probably want this
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
-    new_is_master = true
+# new_is_master = true
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc { 
+  focus_on_activate = 1
     force_default_wallpaper = 2 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_splash_rendering = true
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
-}
+        }
 
 
 #############
@@ -162,32 +172,32 @@ misc {
 #############
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
-input {
-    kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options = korean:ralt_hangul,korean:rctrl_hanja
-    kb_rules =
+        input {
+        kb_layout = us
+        kb_variant =
+        kb_model =
+        kb_options = korean:ralt_hangul,korean:rctrl_hanja
+        kb_rules =
 
-    follow_mouse = 2
-    float_switch_override_focus = 0
+        follow_mouse = 0
+        float_switch_override_focus = 0
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+        sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
-    touchpad {
-        natural_scroll = false
-    }
-}
+        touchpad {
+          natural_scroll = false
+        }
+        }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+# workspace_swipe = false
 }
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
-    name = epic-mouse-v1
+  name = epic-mouse-v1
     sensitivity = -0.5
 }
 
@@ -202,81 +212,92 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 # bind = $mainMod, Q, exec, $terminal
 # bind = $mainMod, C, killactive,
-# bind = $mainMod, M, exit,
+bind = $mainMod, M, exit,
 # bind = $mainMod, V, togglefloating,
 # bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo # dwindle
+     bind = $mainMod, P, pseudo # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+     bind = $mainMod, left, movefocus, l
+     bind = $mainMod, right, movefocus, r
+     bind = $mainMod, up, movefocus, u
+     bind = $mainMod, down, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+     bind = $mainMod, 1, workspace, 1
+     bind = $mainMod, 2, workspace, 2
+     bind = $mainMod, 3, workspace, 3
+     bind = $mainMod, 4, workspace, 4
+     bind = $mainMod, 5, workspace, 5
+     bind = $mainMod, 6, workspace, 6
+     bind = $mainMod, 7, workspace, 7
+     bind = $mainMod, 8, workspace, 8
+     bind = $mainMod, 9, workspace, 9
+     bind = $mainMod, 0, workspace, 10
+
+     bind = $mainMod CTRL, l, workspace, r+1
+     bind = $mainMod CTRL, h, workspace, r-1
+
+     bind = $mainMod ALT, l, movetoworkspace, r+1
+     bind = $mainMod ALT, h, movetoworkspace, r-1
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+     bind = $mainMod SHIFT, 1, movetoworkspace, 1
+     bind = $mainMod SHIFT, 2, movetoworkspace, 2
+     bind = $mainMod SHIFT, 3, movetoworkspace, 3
+     bind = $mainMod SHIFT, 4, movetoworkspace, 4
+     bind = $mainMod SHIFT, 5, movetoworkspace, 5
+     bind = $mainMod SHIFT, 6, movetoworkspace, 6
+     bind = $mainMod SHIFT, 7, movetoworkspace, 7
+     bind = $mainMod SHIFT, 8, movetoworkspace, 8
+     bind = $mainMod SHIFT, 9, movetoworkspace, 9
+     bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+     bind = $mainMod, S, togglespecialworkspace, magic
+     bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+     bind = $mainMod, mouse_down, workspace, e+1
+     bind = $mainMod, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+     bindm = $mainMod, mouse:272, movewindow
+     bindm = $mainMod, mouse:273, resizewindow
 
 #----- Fulleaf bind -----
-bind = , Print, exec, slurp | grim -g - ~/$(date +'ss%y-%m-%d-%H%M%S.png')
+     bind = , Print, exec, slurp | grim -g - ~/$(date +'ss%y-%m-%d-%H%M%S.png')
 # bind = shift, Print, exec, grim -o DP-1 ~/$(date +'ss%y-%m-%d-%H%M%S.png')
-bind = shift, Print, exec, grim ~/$(date +'ss%y-%m-%d-%H%M%S.png')
+     bind = shift, Print, exec, grim ~/$(date +'ss%y-%m-%d-%H%M%S.png')
 
-bind = $mainMod ctrl, 1, exec, if [ $(hyprctl monitors -j | jq ".[]|select(.name==\"DP-1\").dpmsStatus") = "true" ]; then hyprctl dispatch dpms off DP-1; else hyprctl dispatch dpms on DP-1; fi
-bind = $mainMod, slash, exec, pactl set-default-sink $(pactl list short sinks |awk '{print $2}' |wofi $rofi_args --dmenu)
+     bind = $mainMod ctrl, 1, exec, if [ $(hyprctl monitors -j | jq ".[]|select(.name==\"DP-1\").dpmsStatus") = "true" ]; then hyprctl dispatch dpms off DP-1; else hyprctl dispatch dpms on DP-1; fi
+     # bind = $mainMod, slash, exec, ~/.config/hypr/script/sink-changer.py
+     #
+     #
+bind = $mainMod, slash, exec, sh -c 'SINK_JSON=$(pw-dump | jq "[.[] | select(.type == \"PipeWire:Interface:Node\") | select(.info.props.\"media.class\" == \"Audio/Sink\") | {id: .id, description: .info.props.\"node.description\"}] | sort_by(.description)"); SINK_NAMES=$(echo "$SINK_JSON" | jq -r ".[].description"); SELECTED_NAME=$(echo "$SINK_NAMES" | wofi --show=dmenu --hide-scroll --allow-markup --define=hide_search=true --location=top_right --width=400 --height=150 --xoffset=-60 $rofi_args --dmenu); if [ -n "$SELECTED_NAME" ]; then SINK_ID=$(echo "$SINK_JSON" | jq -r ".[] | select(.description == \"$SELECTED_NAME\") | .id"); wpctl set-default $SINK_ID; fi'
+bind = $mainMod, comma, exec, sh -c 'DEVICES=$(bluetoothctl devices | grep "Device" | awk "{print \$2 \"|\" \$3,\$4,\$5,\$6,\$7,\$8,\$9}" 2>/dev/null); DEVICE_NAMES=$(echo "$DEVICES" | cut -d"|" -f2 | sed "s/^ *//"); SELECTED_NAME=$(echo "$DEVICE_NAMES" | wofi --show=dmenu --hide-scroll --allow-markup --define=hide_search=true --location=top_right --width=400 --height=150 --xoffset=-60 --dmenu -p "Connect Bluetooth Device:"); if [ -n "$SELECTED_NAME" ]; then MAC_ADDR=$(echo "$DEVICES" | grep "$SELECTED_NAME" | cut -d"|" -f1); bluetoothctl connect $MAC_ADDR 2>/dev/null; fi'
+# bind = $mainMod, slash, exec, sh -c 'SINK_LIST=$(pw-dump | jq -r "[.[] | select(.type == \"PipeWire:Interface:Node\") | select(.info.props.\"media.class\" == \"Audio/Sink\") | {id: .id, description: .info.props.\"node.description\"}] | sort_by(.description) | .[] | \"\(.id): \(.description)\""); SELECTED=$(echo "$SINK_LIST" | wofi $rofi_args --dmenu); if [ -n "$SELECTED" ]; then SINK_ID=$(echo "$SELECTED" | cut -d: -f1); wpctl set-default $SINK_ID; fi'
 # bind = $mainMod, comma, exec, $(ls /dev/sd* |awk '{print $1}' |wofi $rofi_args --dmenu)
-bind = $mainMod SHIFT, e, exec, ~/.config/sway/script/powermenu.sh
+     bind = $mainMod SHIFT, e, exec, ~/.config/hypr/script/powermenu.sh
 
-bind =, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bind =, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bind =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bind =, XF86AudioPlay, exec, mpc toggle
-bind =, XF86AudioNext, exec, mpc next
-bind =, XF86AudioPrev, exec, mpc prev
+     bind =, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+     bind =, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+     bind =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+     bind =, XF86AudioPlay, exec, mpc toggle
+     bind =, XF86AudioNext, exec, mpc next
+     bind =, XF86AudioPrev, exec, mpc prev
 
-bind = $mainMod, return, exec, $terminal
-bind = $mainMod SHIFT, return, exec, $terminal -a my_term
-bind = $mainMod SHIFT, q, killactive
+     bind = $mainMod, return, exec, $terminal
+     bind = $mainMod SHIFT, return, exec, $terminal -a my_term
+     bind = $mainMod SHIFT, q, killactive
 # bind = $mainMod SHIFT, q, closewindow,
 # bind = $mainMod, e, exec, $fileManager
-bind = $mainMod, z, togglefloating
-bind = $mainMod, e, togglesplit # dwindle
-bind = $mainMod, d, exec, $menu
-bind = $mainMod, f, fullscreen
-bind = $mainMod shift, f, fakefullscreen
+     bind = $mainMod, z, togglefloating
+     bind = $mainMod, e, togglesplit # dwindle
+     bind = $mainMod, d, exec, $menu
+     bind = $mainMod, f, fullscreen
+# bind = $mainMod shift, f, fakefullscreen
 
 
 # bind = $mainMod, h, focuswindow ,tiled,
@@ -287,30 +308,38 @@ bind = $mainMod shift, f, fakefullscreen
 # bind = $mainMod, h, cyclenext,l tiled
 # bind = $mainMod, l, cyclenext,r tiled
 
-bind = $mainMod, h, movefocus, l
-bind = $mainMod, l, movefocus, r
-bind = $mainMod, k, movefocus, u
-bind = $mainMod, j, movefocus, d
+     bind = $mainMod, h, movefocus, l
+     bind = $mainMod, l, movefocus, r
+     bind = $mainMod, k, movefocus, u
+     bind = $mainMod, j, movefocus, d
 
-bind = $mainMod, h, bringactivetotop
-bind = $mainMod, l, bringactivetotop
-bind = $mainMod, k, bringactivetotop
-bind = $mainMod, j, bringactivetotop
+     bind = $mainMod, h, bringactivetotop
+     bind = $mainMod, l, bringactivetotop
+     bind = $mainMod, k, bringactivetotop
+     bind = $mainMod, j, bringactivetotop
 
-bind = SUPER SHIFT, h, movewindow, l
-bind = SUPER SHIFT, l, movewindow, r
-bind = SUPER SHIFT, k, movewindow, u
-bind = SUPER SHIFT, j, movewindow, d
+     bind = SUPER SHIFT, h, movewindow, l
+     bind = SUPER SHIFT, l, movewindow, r
+     bind = SUPER SHIFT, k, movewindow, u
+     bind = SUPER SHIFT, j, movewindow, d
 
-bind = $mainMod CTRL, l, moveactive, 50 0
-bind = $mainMod CTRL, h, moveactive, -50 0
-bind = $mainMod CTRL, k, moveactive, 0 -50
-bind = $mainMod CTRL, j, moveactive, 0 50
+# bind = $mainMod CTRL, l, moveactive, 50 0
+# bind = $mainMod CTRL, h, moveactive, -50 0
+# bind = $mainMod CTRL, k, moveactive, 0 -50
+# bind = $mainMod CTRL, j, moveactive, 0 50
 
-bind = $mainMod, Tab, cyclenext, float
-bind = $mainMod SHIFT, Tab, cyclenext,prev float
-bind = $mainMod, Tab, bringactivetotop, float
-bind = $mainMod SHIFT, Tab, bringactivetotop, float
+     bind = $mainMod, Tab, cyclenext, float
+     bind = $mainMod SHIFT, Tab, cyclenext,prev float
+     bind = $mainMod, Tab, bringactivetotop, float
+     bind = $mainMod SHIFT, Tab, bringactivetotop, float
+
+     bind = $mainMod, Space, cyclenext, tiled
+     bind = $mainMod SHIFT, Space, cyclenext,prev tiled
+     bind = $mainMod, Space, bringactivetotop, tiled
+     bind = $mainMod SHIFT, Space, bringactivetotop, tiled
+
+# bind = , Print, exec, grim -g - ~/$(date +'ss%y-%m-%d-%H%M%S.png')
+# bind = SHIFT, Print, exec, grim ~/$(date +'ss%y-%m-%d-%H%M%S.png')
 
 # bind = Alt, Tab, cyclenext,
 # bind = Alt, Tab, focuswindow, floating
@@ -330,13 +359,15 @@ bind = $mainMod SHIFT, Tab, bringactivetotop, float
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+# windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
 #----- Fulleaf Window Rules -----
-windowrule = float, .* # All windows floating
+     windowrule = float, class:.* # All windows floating
 # windowrulev2 = float, class:.* # All windows floating
 
-# windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+                                    windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+
+windowrulev2 = workspace 2 silent, class:^(discord)$
 
 #-- Tiling windows
 windowrulev2 = tile,class:^(foot)$
@@ -344,3 +375,10 @@ windowrulev2 = opaque,class:^(chromium)$
 windowrulev2 = opaque,class:^(Chromium)$
 windowrulev2 = tile ,class:^(chromium)$
 windowrulev2 = tile ,class:^(Chromium)$
+windowrulev2 = tile ,class:^(google-chrome)$
+# windowrulev2 = focus, class:^(polkit-gnome-authentication-agent-1)$
+
+windowrulev2 = float,title:.*지니 - Chrome.*
+windowrulev2 = opacity 1.0 override,title:.*- YouTube.*
+windowrulev2 = opacity 1.0 override,title:.*PIP.*
+windowrulev2 = opacity 1.0 override,class:^(mpv)$
