--- a/skel/.config/hypr/hyprland.conf
+++ b/skel/.config/hypr/hyprland.conf
@@ -45,6 +45,7 @@ $menu = wofi --show drun -I
 #exec-once = ibus-daemon -drR
 
 # exec-once = swaync &
+exec-once = systemctl --user start hyprpolkitagent.service
 exec-once = fcitx5 -d &
 exec-once = waybar -c ~/.config/waybar/config.hypr
 exec-once = eww daemon
