--- a/skel/.config/hypr/hyprland.conf
+++ b/skel/.config/hypr/hyprland.conf
@@ -8,6 +8,7 @@ exec-once = eww daemon &
 exec-once = eww open-many cpu-desktop-widget gpu-desktop-widget ram-desktop-widget disk-desktop-widget calendar-desktop-widget &
 
 # exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = systemctl --user start hyprpolkitagent
 exec-once = hyprpolkit &
 exec-once = hypridle &
 # exec-once = udiskie &
