--- a/skel/.config/hypr/window-rules.conf
+++ b/skel/.config/hypr/window-rules.conf
@@ -2,9 +2,11 @@ windowrulev2 = suppressevent maximize, class:.*
 
 windowrulev2 = float, class:^(file_progress|confirm|dialog|download|notification|page-info|splash|toolbar|utility|hyprpolkit)$
 
+windowrule = float, class:^(floating_foot)$
+
 windowrulev2 = opacity 1.0 override,title:.*- YouTube.*
-windowrulev2 = opacity 1.0 override; keepaspectratio; float; size 30% 30%; position 98% 98%, title:.*PIP.*
-windowrulev2 = opacity 1.0 override; float; keepaspectratio, class:^(mpv)$
+windowrulev2 = float, pin, opacity 1.0 override, keepaspectratio, size 30% 30%, move onscreen 68% 68%, title:.*PIP.*
+windowrulev2 = opacity 1.0 override, float, keepaspectratio, class:^(mpv)$
 
 windowrulev2 = float, class:^(Steam)$, class:^(steamwebhelper)$
 windowrulev2 = float,title:.*지니 - Chrome.*
