--- a/skel/.config/hypr/keybindings.conf
+++ b/skel/.config/hypr/keybindings.conf
@@ -15,11 +15,6 @@ bind = $mod, l, movefocus, r
 bind = $mod, k, movefocus, u
 bind = $mod, j, movefocus, d
 
-# bind = $mod, h, movefocus, l; bringactivetotop
-# bind = $mod, l, movefocus, r; bringactivetotop
-# bind = $mod, k, movefocus, u; bringactivetotop
-# bind = $mod, j, movefocus, d; bringactivetotop
-
 bind = SUPER SHIFT, h, movewindow, l
 bind = SUPER SHIFT, l, movewindow, r
 bind = SUPER SHIFT, k, movewindow, u
@@ -41,7 +36,7 @@ bindm = $mod, mouse:273, resizewindow
 bindm = $mod shift, mouse:273, resizewindow 1
 
 bind = $mod SHIFT, q, killactive
-bind = $mod alt ctrl, x, closewindow
+bind = $mod alt ctrl, x, forcekillactive
 
 bind = $mod, p, pin
 bind = $mod, semicolon, pseudo,active
@@ -53,7 +48,7 @@ bind = $mod, f, fullscreen
 
 bind = $mod, d, exec, $menu
 bind = $mod, return, exec, $term
-bind = $mod SHIFT, return, exec, $term -a foot -t floating_foot
+bind = $mod SHIFT, return, exec, $term -a floating_foot
 
 bind = $mod SHIFT, e, exec, ~/.config/hypr/script/powermenu.sh
 
@@ -66,4 +61,4 @@ bind = $mod, comma, exec, sh -c 'DEVICES=$(bluetoothctl devices | grep "Device" 
 # bind = $mod, comma, exec, $(ls /dev/sd* |awk '{print $1}' |wofi $rofi_args --dmenu)
 
 bind = $mod ctrl, 1, exec, if [ $(hyprctl monitors -j | jq ".[]|select(.name==\"DP-1\").dpmsStatus") = "true" ]; then hyprctl dispatch dpms off DP-1; else hyprctl dispatch dpms on DP-1; fi
-
+bind = $mod, space, exec, $(hyprctl activewindow -j | jq '.floating') && hyprctl dispatch cyclenext tiled || hyprctl dispatch cyclenext floating
