--- a/skel/.config/hypr/keybindings.conf
+++ b/skel/.config/hypr/keybindings.conf
@@ -15,6 +15,11 @@ bind = $mod, l, movefocus, r
 bind = $mod, k, movefocus, u
 bind = $mod, j, movefocus, d
 
+# bind = $mod, h, movefocus, l; bringactivetotop
+# bind = $mod, l, movefocus, r; bringactivetotop
+# bind = $mod, k, movefocus, u; bringactivetotop
+# bind = $mod, j, movefocus, d; bringactivetotop
+
 bind = SUPER SHIFT, h, movewindow, l
 bind = SUPER SHIFT, l, movewindow, r
 bind = SUPER SHIFT, k, movewindow, u
@@ -24,9 +29,13 @@ bind = $mod, 1, workspace, 1
 
 bind = $mod alt, l, workspace, r+1
 bind = $mod alt, h, workspace, r-1
+bind = $mod alt, s, workspace, r+1
+bind = $mod alt, a, workspace, r-1
 
 bind = $mod ctrl, l, movetoworkspace, r+1
 bind = $mod ctrl, h, movetoworkspace, r-1
+bind = $mod ctrl, s, movetoworkspace, r+1
+bind = $mod ctrl, a, movetoworkspace, r-1
 
 bind = $mod, S, togglespecialworkspace, magic
 bind = $mod SHIFT, S, movetoworkspace, special:magic
