--- a/skel/.config/hypr/keybindings.conf
+++ b/skel/.config/hypr/keybindings.conf
@@ -20,10 +20,10 @@ bind = $mod, j, movefocus, d
 # bind = $mod, k, movefocus, u; bringactivetotop
 # bind = $mod, j, movefocus, d; bringactivetotop
 
-bind = SUPER SHIFT, h, movewindow, l
-bind = SUPER SHIFT, l, movewindow, r
-bind = SUPER SHIFT, k, movewindow, u
-bind = SUPER SHIFT, j, movewindow, d
+bind = $mod SHIFT, h, movewindow, l
+bind = $mod SHIFT, l, movewindow, r
+bind = $mod SHIFT, k, movewindow, u
+bind = $mod SHIFT, j, movewindow, d
 
 bind = $mod, 1, workspace, 1
 
@@ -71,3 +71,4 @@ bind = $mod, comma, exec, sh -c 'DEVICES=$(bluetoothctl devices | grep "Device" 
 
 bind = $mod ctrl, 1, exec, if [ $(hyprctl monitors -j | jq ".[]|select(.name==\"DP-1\").dpmsStatus") = "true" ]; then hyprctl dispatch dpms off DP-1; else hyprctl dispatch dpms on DP-1; fi
 bind = $mod, space, exec, $(hyprctl activewindow -j | jq '.floating') && hyprctl dispatch cyclenext tiled || hyprctl dispatch cyclenext floating
+bind = $mod, TAB, focuscurrentorlast
