--- a/skel/.config/hypr/keybindings.conf
+++ b/skel/.config/hypr/keybindings.conf
@@ -3,12 +3,12 @@ $filegui = thunar
 $menu = wofi --show drun -I
 $mod = SUPER
 
-bind =, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+,locked
-bind =, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-,locked
-bind =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle,locked
-bind =, XF86AudioPlay, exec, playerctl play-pause,locked
-bind =, XF86AudioNext, exec, playerctl next,locked
-bind =, XF86AudioPrev, exec, playerctl previous,locked
+bindl =, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+bindl =, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindl =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindl =, XF86AudioPlay, exec, playerctl play-pause
+bindl =, XF86AudioNext, exec, playerctl next
+bindl =, XF86AudioPrev, exec, playerctl previous
 
 bind = $mod, h, movefocus, l
 bind = $mod, l, movefocus, r
