--- a/skel/.config/hypr/keybindings.conf
+++ b/skel/.config/hypr/keybindings.conf
@@ -32,8 +32,10 @@ bind = $mod ctrl, h, movetoworkspace, r-1
 bind = $mod ctrl, s, movetoworkspace, r+1
 bind = $mod ctrl, a, movetoworkspace, r-1
 
-bind = $mod, S, togglespecialworkspace, magic
-bind = $mod SHIFT, S, movetoworkspace, special:magic
+bind = $mod, s, togglespecialworkspace, magic
+bind = $mod SHIFT, s, exec, ~/.config/hypr/scripts/toggle_movetoworkspace_special special:magic
+# bind = $mod SHIFT, s, movetoworkspace, special:magic
+# bind = $mod, ctrl s, movetoworkspace, r+0
 
 bindm = $mod, mouse:272, movewindow
 bindm = $mod, mouse:273, resizewindow
@@ -54,7 +56,7 @@ bind = $mod, d, exec, $menu
 bind = $mod, return, exec, $term
 bind = $mod SHIFT, return, exec, $term -a floating_foot
 
-bind = $mod SHIFT, e, exec, ~/.config/hypr/script/powermenu.sh
+bind = $mod SHIFT, e, exec, ~/.config/hypr/scripts/powermenu.sh
 
 bind = , Print, exec, slurp | grim -g - ~/$(date +'ss%y-%m-%d-%H%M%S.png')
 bind = shift, Print, exec, grim ~/$(date +'ss%y-%m-%d-%H%M%S.png')
