--- a/skel/.config/hypr/keybindings.conf
+++ b/skel/.config/hypr/keybindings.conf
@@ -1,4 +1,4 @@
-$term = foot
+$term = alacritty
 $filegui = thunar
 $menu = wofi --show drun -I
 $mod = SUPER
@@ -21,6 +21,11 @@ bind = $mod SHIFT, k, movewindow, u
 bind = $mod SHIFT, j, movewindow, d
 
 bind = $mod, 1, workspace, 1
+
+bind = $mod, d, workspace, r+1
+bind = $mod, a, workspace, r-1
+bind = $mod shift, d, movetoworkspace, r+1
+bind = $mod shift, a, movetoworkspace, r-1
 
 bind = $mod alt, l, workspace, r+1
 bind = $mod alt, h, workspace, r-1
@@ -52,9 +57,9 @@ bind = $mod, z, togglefloating
 bind = $mod, v, togglesplit
 bind = $mod, f, fullscreen
 
-bind = $mod, d, exec, $menu
+bind = $mod, w, exec, $menu
 bind = $mod, return, exec, $term
-bind = $mod SHIFT, return, exec, $term -a floating_foot
+bind = $mod SHIFT, return, exec, $term --class floating_alacritty
 
 bind = $mod SHIFT, e, exec, ~/.config/hypr/scripts/powermenu.sh
 
@@ -69,3 +74,4 @@ bind = $mod, comma, exec, sh -c 'DEVICES=$(bluetoothctl devices | grep "Device" 
 bind = $mod ctrl, 1, exec, if [ $(hyprctl monitors -j | jq ".[]|select(.name==\"DP-1\").dpmsStatus") = "true" ]; then hyprctl dispatch dpms off DP-1; else hyprctl dispatch dpms on DP-1; fi
 bind = $mod, space, exec, $(hyprctl activewindow -j | jq '.floating') && hyprctl dispatch cyclenext tiled || hyprctl dispatch cyclenext floating
 bind = $mod, TAB, focuscurrentorlast
+bind = $mod, y, exec, $term --class floating_alacritty -e bash -ic "r; exec bash"
