--- a/skel/.config/hypr/keybindings.conf
+++ b/skel/.config/hypr/keybindings.conf
@@ -1,4 +1,4 @@
-$term = alacritty
+$term = foot
 $filegui = thunar
 $menu = wofi --show drun -I
 $mod = SUPER
@@ -59,7 +59,7 @@ bind = $mod, f, fullscreen
 
 bind = $mod, w, exec, $menu
 bind = $mod, return, exec, $term
-bind = $mod SHIFT, return, exec, $term --class floating_alacritty
+bind = $mod SHIFT, return, exec, $term -a floating_foot bash -ic "r;exec bash"
 
 bind = $mod SHIFT, e, exec, ~/.config/hypr/scripts/powermenu.sh
 
@@ -74,4 +74,3 @@ bind = $mod, comma, exec, sh -c 'DEVICES=$(bluetoothctl devices | grep "Device" 
 bind = $mod ctrl, 1, exec, if [ $(hyprctl monitors -j | jq ".[]|select(.name==\"DP-1\").dpmsStatus") = "true" ]; then hyprctl dispatch dpms off DP-1; else hyprctl dispatch dpms on DP-1; fi
 bind = $mod, space, exec, $(hyprctl activewindow -j | jq '.floating') && hyprctl dispatch cyclenext tiled || hyprctl dispatch cyclenext floating
 bind = $mod, TAB, focuscurrentorlast
-bind = $mod, y, exec, $term --class floating_alacritty -e bash -ic "r; exec bash"
