--- a/skel/.config/hypr/keybindings.conf
+++ b/skel/.config/hypr/keybindings.conf
@@ -11,9 +11,13 @@ bindl =, XF86AudioNext, exec, playerctl next
 bindl =, XF86AudioPrev, exec, playerctl previous
 
 bind = $mod, h, movefocus, l
+bind = $mod, h, bringactivetotop
 bind = $mod, l, movefocus, r
+bind = $mod, l, bringactivetotop
 bind = $mod, k, movefocus, u
+bind = $mod, k, bringactivetotop
 bind = $mod, j, movefocus, d
+bind = $mod, j, bringactivetotop
 
 bind = $mod SHIFT, h, movewindow, l
 bind = $mod SHIFT, l, movewindow, r
