--- a/skel/.config/hypr/window-rules.conf
+++ b/skel/.config/hypr/window-rules.conf
@@ -1,5 +1,6 @@
 windowrulev2 = suppressevent maximize, class:.*
 
+# windowrule = float, modal:true
 windowrulev2 = float, class:^(file_progress|confirm|dialog|download|notification|page-info|splash|toolbar|utility|hyprpolkit)$
 
 windowrule = float, class:^(floating_foot)$
