--- a/skel/.config/hypr/window-rules.conf
+++ b/skel/.config/hypr/window-rules.conf
@@ -1,15 +1,21 @@
 windowrulev2 = suppressevent maximize, class:.*
-
+# windowrulev2 = float, class:^(file_progress|confirm|dialog|download|notification|page-info|splash|toolbar|utility|hyprpolkit)$
 # windowrule = float, modal:true
-windowrulev2 = float, class:^(file_progress|confirm|dialog|download|notification|page-info|splash|toolbar|utility|hyprpolkit)$
 
 windowrule = float, class:^(floating_foot)$
-
 windowrulev2 = opacity 1.0 override,title:.*- YouTube.*
-windowrulev2 = float, pin, opacity 1.0 override, keepaspectratio, size 30% 30%, move onscreen 68% 68%, title:.*PIP.*
-windowrulev2 = opacity 1.0 override, float, keepaspectratio, class:^(mpv)$
+windowrulev2 = opacity 1.0 override, float, pin, keepaspectratio, size 30% 30%, move onscreen 68% 68%, title:.*PIP.*
+windowrulev2 = float, opacity 1.0 override, keepaspectratio, class:^(mpv)$
+
+# --- google-chrome
+windowrulev2 = float, class:google-chrome
+windowrulev2 = tile, class:google-chrome
+# - 이 크롬설정은 일부러 이렇게 한것입니다.
+# (사이즈가 고정된 팝업창이 플로팅 되는 경우 잘못된 렌더링을 막기위해.)
+windowrulev2 = float, initialTitle:.*about:blank.*
+windowrulev2 = float, initialTitle:.*지니 - Chrome.*
+# windowrulev2 = float, initialTitle:(.*about:blank.*|.*예시 - Chrome.*)
 
 windowrulev2 = float, class:^(Steam)$, class:^(steamwebhelper)$
-windowrulev2 = float,title:.*지니 - Chrome.*
 windowrulev2 = workspace 2 silent, class:^(discord)$
 
