--- a/skel/.config/hypr/window-rules.conf
+++ b/skel/.config/hypr/window-rules.conf
@@ -1,6 +1,10 @@
 windowrulev2 = suppressevent maximize, class:.*
 # windowrulev2 = float, class:^(file_progress|confirm|dialog|download|notification|page-info|splash|toolbar|utility|hyprpolkit)$
+
+# --- 모든창을 플로팅
 # windowrule = float, modal:true
+# windowrule = float, class:.*
+# 잘못된 렌더링을 방지하기 위해 필요한 창만 타일링 전환 설정하는것이 편할수도 있습니다.
 
 windowrule = float, class:^(floating_foot)$
 windowrulev2 = opacity 1.0 override,title:.*- YouTube.*
