--- a/skel/.config/hypr/window-rules.conf
+++ b/skel/.config/hypr/window-rules.conf
@@ -8,7 +8,7 @@ windowrulev2 = suppressevent maximize, class:.*
 
 windowrule = float, class:^(floating_foot)$
 windowrulev2 = opacity 1.0 override,title:.*- YouTube.*
-windowrulev2 = opacity 1.0 override, float, pin, keepaspectratio, size 30% 30%, move onscreen 68% 68%, title:.*PIP.*
+windowrulev2 = opacity 1.0 override, workspace name:PIP silent, float, pin, keepaspectratio, size 30% 30%, move onscreen 68% 68%, title:.*PIP.*
 windowrulev2 = float, opacity 1.0 override, keepaspectratio, class:^(mpv)$
 
 # --- google-chrome
