--- a/skel/.config/fontconfig/fonts.conf
+++ b/skel/.config/fontconfig/fonts.conf
@@ -5,14 +5,23 @@
     <family>serif</family>
     <prefer><family>Noto Serif CJK KR</family></prefer>
   </alias>
-  <alias>
-    <family>sans-serif</family>
-    <prefer><family>Noto Sans CJK KR</family></prefer>
-  </alias>
-  <alias>
-    <family>monospace</family>
-    <prefer><family>D2CodingLigature Nerd Font</family></prefer>
-  </alias>
+  <match target="pattern">
+    <test qual="any" name="family"><string>sans-serif</string></test>
+    <edit name="family" mode="prepend" binding="strong">
+      <string>Noto Sans CJK KR</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test qual="any" name="family"><string>monospace</string></test>
+    <edit name="family" mode="prepend" binding="strong">
+      <string>D2CodingLigature Nerd Font</string>
+    </edit>
+  </match>
+  <!-- <match> -->
+  <!--   <test name="lang" compare="eq"><string>ko</string></test> -->
+  <!--   <test name="family" compare="not_eq"><string>D2CodingLigature Nerd Font</string></test> -->
+  <!--   <edit name="family" mode="prepend"><string>Noto Sans CJK KR</string></edit> -->
+  <!-- </match> -->
   <match target="font">
     <edit mode="assign" name="antialias">
       <bool>true</bool>
@@ -27,7 +36,8 @@
       <const>hintslight</const>
     </edit>
     <edit mode="assign" name="lcdfilter">
-      <const>lcddefault</const>
+      <!-- <const>lcddefault</const> -->
+      <const>lcdlight</const>
     </edit>
     <edit mode="assign" name="rgba">
       <const>rgb</const>
