--- a/skel/.config/hypr/window-rules.conf
+++ b/skel/.config/hypr/window-rules.conf
@@ -1,6 +1,5 @@
 windowrulev2 = suppressevent maximize, class:.*
 # windowrulev2 = float, class:^(file_progress|confirm|dialog|download|notification|page-info|splash|toolbar|utility|hyprpolkit)$
-
 # --- 모든창을 플로팅
 # windowrule = float, modal:true
 # windowrule = float, class:.*
@@ -9,7 +8,7 @@ windowrulev2 = suppressevent maximize, class:.*
 windowrule = float, class:^(floating_foot)$
 windowrulev2 = opacity 1.0 override,title:.*- YouTube.*
 windowrulev2 = opacity 1.0 override, workspace name:PIP silent, float, pin, keepaspectratio, size 30% 30%, move onscreen 68% 68%, title:.*PIP.*
-windowrulev2 = float, opacity 1.0 override, keepaspectratio, class:^(mpv)$
+windowrulev2 = opacity 1.0 override, float, move onscreen cursor, keepaspectratio, class:^(mpv)$
 
 # --- google-chrome
 windowrulev2 = float, class:google-chrome
@@ -19,6 +18,7 @@ windowrulev2 = tile, class:google-chrome
 windowrulev2 = float, initialTitle:.*about:blank.*
 windowrulev2 = float, initialTitle:.*지니 - Chrome.*
 # windowrulev2 = float, initialTitle:(.*about:blank.*|.*예시 - Chrome.*)
+# --- 
 
 windowrulev2 = float, class:^(Steam)$, class:^(steamwebhelper)$
 windowrulev2 = workspace 2 silent, class:^(discord)$
