--- a/skel/.config/mpv/input.conf
+++ b/skel/.config/mpv/input.conf
@@ -31,10 +31,14 @@ SPACE cycle pause
 f cycle fullscreen
 F8 show-text ${playlist}
 F9 show-text ${track-list}
-1 set current-window-scale 0.5
+1 set current-window-scale 0.5 
 2 set current-window-scale 1
 3 set current-window-scale 1.5
 4 set current-window-scale 2
+# 1 set window-scale 0.5
+# 2 set window-scale 1
+# 3 set window-scale 1.5
+# 4 set window-scale 2
 # i script-binding stats/display-stats   # display information and statistics
 i script-binding stats/display-stats-toggle # toggle displaying information and statistics
 # O no-osd cycle-values osd-level 3 1    # toggle displaying the OSD on user interaction or always
@@ -210,7 +214,7 @@ l seek 2
 #L cycle-values loop-file "inf" "no"    # toggle infinite looping
 #ctrl+c quit 4
 #DEL script-binding osc/visibility      # cycle OSC visibility between never, auto (mouse-move) and always
-#ctrl+h cycle-values hwdec "auto-safe" "no"  # toggle hardware decoding
+ctrl+h cycle-values hwdec "auto-safe" "no"  # toggle hardware decoding
 #F8 show-text ${playlist}               # show the playlist
 #F9 show-text ${track-list}             # show the list of video, audio and sub tracks
 
