--- a/skel/.config/mpv/mpv.conf
+++ b/skel/.config/mpv/mpv.conf
@@ -1,3 +1,31 @@
+# 후처리는 기본값이 제일 나은듯 합니다..
+# bicubic 이랑 spline36 각각 다 비교해봤는데
+# 둘다 영상에 따라 각각 부자연스러운 경우가 있습니다.
+# MPV 에 설정된 기본값이 가장 어떤 영상에서든 가장 자연스러웠어요.
+# 필터 지정 하지 않으면 자동으로 기본값 적용 됩니다.
+#
+# --- Hyprland 에서는 리사이즈 문제가 아직 해결되어 있지 않습니다.
+#  깃허브에서 확인된 이슈가 2025-12-14 기준 아직 해결 안된지 
+#  곧 있으면 3년이 넘어가네요.
+#  아래 옵션을 주석 해제 하여 xwayland 로 실행이 최선의 임시방편입니다.
+#
+gpu-api=vulkan
+gpu-context=x11vk
+#
+# 제가 확인해본 바로는 이렇게 했을때
+#
+# 1. 영상품질에는 전혀 영향이 없습니다.
+# 2. 오버헤드는 무시해도 되는수준입니다.
+# 3. 지연이나 다른 문제는 사용자가 체감하기 어렵습니다.
+#
+# - hyprland 에서 해당 문제를 조속히 해결해주길 정중하게 바라며...
+# ---
+
+force-window=yes
+geometry=50%:50%
+autofit-larger=90%x90%
+autofit-smaller=20%
+
 volume-max=100
 volume=50
 
@@ -9,6 +37,7 @@ sub-border-color=0/0/0/0.8
 sub-shadow-offset=1.4
 sub-shadow-color=0/0/0/0.2
 
+script-opts=osc-vidscale=no
 #no-osd-bar
 #osd-bar-h=2
 osd-border-size=2
@@ -16,12 +45,10 @@ osd-border-color=0.2/0.2/0.2/0.7
 osd-color=1/1/1/0.7
 osd-bar-align-y=-0.78
 
-autofit-larger=90%x90%
 watch-later-options-remove=volume
 watch-later-options-remove=fullscreen
 save-position-on-quit
 no-input-builtin-bindings
-force-window=yes
 
 #
 # Example mpv configuration file
@@ -64,7 +91,7 @@ force-window=yes
 #autofit-larger=90%x90%
 
 # Do not close the window on exit.
-#keep-open=yes
+keep-open=yes
 
 # Do not wait with showing the video window until it has loaded. (This will
 # resize the window once video is loaded. Also always shows a window with
