--- a/skel/.config/mpv/input.conf
+++ b/skel/.config/mpv/input.conf
@@ -31,14 +31,14 @@ SPACE cycle pause
 f cycle fullscreen
 F8 show-text ${playlist}
 F9 show-text ${track-list}
-1 set current-window-scale 0.5 
-2 set current-window-scale 1
-3 set current-window-scale 1.5
-4 set current-window-scale 2
-# 1 set window-scale 0.5
-# 2 set window-scale 1
-# 3 set window-scale 1.5
-# 4 set window-scale 2
+# 1 set current-window-scale 0.5;set geometry 50%:50%
+# 2 set current-window-scale 1;set geometry 50%:50%
+# 3 set current-window-scale 1.5;set geometry 50%:50%
+# 4 set current-window-scale 2;set geometry 50%:50%
+1 set window-scale 0.5;set geometry 50%:50%
+2 set window-scale 1;set geometry 50%:50%
+3 set window-scale 1.5;set geometry 50%:50%
+4 set window-scale 2;set geometry 50%:50%
 # i script-binding stats/display-stats   # display information and statistics
 i script-binding stats/display-stats-toggle # toggle displaying information and statistics
 # O no-osd cycle-values osd-level 3 1    # toggle displaying the OSD on user interaction or always
