--- a/skel/.config/mpv/mpv.conf
+++ b/skel/.config/mpv/mpv.conf
@@ -24,7 +24,7 @@ gpu-context=x11vk
 force-window=yes
 geometry=50%:50%
 autofit-larger=90%x90%
-autofit-smaller=20%
+autofit-smaller=20%x20%
 
 volume-max=100
 volume=50
