--- a/skel/.config/mpv/mpv.conf
+++ b/skel/.config/mpv/mpv.conf
@@ -7,7 +7,8 @@
 # --- Hyprland 에서는 리사이즈 문제가 아직 해결되어 있지 않습니다.
 #  깃허브에서 확인된 이슈가 2025-12-14 기준 아직 해결 안된지 
 #  곧 있으면 3년이 넘어가네요.
-#  아래 옵션을 주석 해제 하여 xwayland 로 실행이 최선의 임시방편입니다.
+#  지금으로써는 xwayland 로 실행이 최선의 임시방편입니다.
+#  문제발생시 아래 내용 주석처리 하시면 됩니다.
 #
 gpu-api=vulkan
 gpu-context=x11vk
@@ -22,7 +23,10 @@ gpu-context=x11vk
 # ---
 
 force-window=yes
-geometry=50%:50%
+osc=yes
+window-dragging=yes
+script-opts=osc-deadzonesize=0
+geometry=99%:99%
 autofit-larger=90%x90%
 autofit-smaller=20%x20%
 
