--- a/skel/.config/mpv/mpv.conf
+++ b/skel/.config/mpv/mpv.conf
@@ -1,9 +1,3 @@
-# 후처리는 기본값이 제일 나은듯 합니다..
-# bicubic 이랑 spline36 각각 다 비교해봤는데
-# 둘다 영상에 따라 각각 부자연스러운 경우가 있습니다.
-# MPV 에 설정된 기본값이 가장 어떤 영상에서든 가장 자연스러웠어요.
-# 필터 지정 하지 않으면 자동으로 기본값 적용 됩니다.
-#
 # --- Hyprland 에서는 리사이즈 문제가 아직 해결되어 있지 않습니다.
 #  깃허브에서 확인된 이슈가 2025-12-14 기준 아직 해결 안된지 
 #  곧 있으면 3년이 넘어가네요.
@@ -22,6 +16,7 @@ gpu-context=x11vk
 # - hyprland 에서 해당 문제를 조속히 해결해주길 정중하게 바라며...
 # ---
 
+cscale=spline36
 force-window=yes
 osc=yes
 window-dragging=yes
