--- a/skel/.config/mpv/mpv.conf
+++ b/skel/.config/mpv/mpv.conf
@@ -16,6 +16,7 @@ gpu-context=x11vk
 # - hyprland 에서 해당 문제를 조속히 해결해주길 정중하게 바라며...
 # ---
 
+scale=lanczos
 cscale=spline36
 force-window=yes
 osc=yes
