--- a/skel/.config/fontconfig/fonts.conf
+++ b/skel/.config/fontconfig/fonts.conf
@@ -36,8 +36,8 @@
       <const>hintslight</const>
     </edit>
     <edit mode="assign" name="lcdfilter">
-      <!-- <const>lcddefault</const> -->
-      <const>lcdlight</const>
+      <const>lcddefault</const>
+      <!-- <const>lcdlight</const> -->
     </edit>
     <edit mode="assign" name="rgba">
       <const>rgb</const>
