--- a/skel/.config/mpv/mpv.conf
+++ b/skel/.config/mpv/mpv.conf
@@ -4,7 +4,7 @@
 #  지금으로써는 xwayland 로 실행이 최선의 임시방편입니다.
 #  문제발생시 아래 내용 주석처리 하시면 됩니다.
 #
-gpu-api=vulkan
+# gpu-api=vulkan
 gpu-context=x11vk
 #
 # 제가 확인해본 바로는 이렇게 했을때
