--- a/skel/.config/mpv/mpv.conf
+++ b/skel/.config/mpv/mpv.conf
@@ -5,7 +5,9 @@
 #  문제발생시 아래 내용 주석처리 하시면 됩니다.
 #
 # gpu-api=vulkan
-gpu-context=x11vk
+# gpu-context=x11vk
+gpu-api=opengl
+gpu-context=x11egl
 #
 # 제가 확인해본 바로는 이렇게 했을때
 #
