--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,5 @@
 # These are supported funding model platforms
 
 github: sephid86
-# custom: ["https://buymeacoffee.com/sephid86"]
-custom: [![ Buy Me A Ramen ](https://img.shields.io/badge/Buy%20Me%20A%20Ramen-FFDD00?style=for-the-badge&logo=buy-me-a-coffee&logoColor=black)](https://buymeacoffee.com/sephid86)
+custom: ["https://buymeacoffee.com/sephid86"]
+[![ Buy Me A Ramen ](https://img.shields.io/badge/Buy%20Me%20A%20Ramen-FFDD00?style=for-the-badge&logo=buy-me-a-coffee&logoColor=black)](https://buymeacoffee.com/sephid86)
