--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,5 @@
 # These are supported funding model platforms
 
 github: sephid86
+buy_me_a_coffee: sephid86 
 custom: ["https://buymeacoffee.com/sephid86"]
