--- a/skel/.config/foot/foot.ini
+++ b/skel/.config/foot/foot.ini
@@ -123,13 +123,15 @@ background=000000
 # urls=<regular3>
 
 [csd]
+size=0
+#preferred=none
 # preferred=server
 # size=26
 # font=<primary font>
 # color=<foreground color>
 # hide-when-maximized=no
 # double-click-to-maximize=yes
-# border-width=0
+#; border-width=1
 # border-color=<csd.color>
 # button-width=26
 # button-color=<background color>
